--- a/package.json
+++ b/package.json
@@ -4,17 +4,24 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-toastify": "^7.0.3",
+    "style-loader": "^2.0.0",
     "web-vitals": "^1.1.1",
     "webpack": "^5.28.0"
   },
   "scripts": {
-    "start": "webpack serve --config ./webpack.dev.js --color",
+    "start": "webpack serve --config ./webpack.dev.js --color --open",
     "build": "webpack --config ./webpack.dev.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -43,6 +50,7 @@
     "@babel/preset-react": "^7.13.13",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.0",
+    "html-webpack-plugin": "^5.3.1",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
   }
